Adding support Junit 5 and properties to run tests