@@ -30,7 +30,43 @@ deployPluginVersion=7.0.0
 
 ![](/img/java-refs.png)
 
-2. Configure the `copyDependencies` task and replace JavaLanguageVersion in this file:
+Still in the **server/jvm/build.gradle.kts** file, add the required directives to support Junit 5 and properties to run tests.
+
+```kotlin {10,14-25} title="server/jvm/build.gradle.kts"
+...
+subprojects  {
+    ...
+    tasks {
+        ...
+        test {
+            systemProperty("DbLayer", "SQL")
+            systemProperty("DbHost", "jdbc:h2:mem:test;DB_CLOSE_DELAY=-1")
+            systemProperty("DbQuotedIdentifiers", "true")
+            useJUnitPlatform()
+
+            // Add exports and opens so ChronicleQueue can continue working in JDK 17.
+            // More info in: https://chronicle.software/chronicle-support-java-17/
+            jvmArgs = jvmArgs!! + listOf(
+                "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
+                "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+                "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED",
+                "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+                "--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED",
+                "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+                "--add-opens=java.base/java.io=ALL-UNNAMED",
+                "--add-opens=java.base/java.util=ALL-UNNAMED",
+                "--add-opens=java.base/java.nio=ALL-UNNAMED" // this one is opened for LMDB
+            )
+        }
+        ...
+    }
+}
+...
+```
+![](/img/junit5-directives.png)
+
+Lastly, configure the `copyDependencies` task and replace JavaLanguageVersion.
 
 ```kotlin {13-19,28-30,34-36} title="server/jvm/build.gradle.kts"
 ...
@@ -76,7 +112,7 @@ allprojects {
 
 ![](/img/gradle-properties-copyd.png)
 
-3. In the ** server/jvm/-application_-site-specific/build.gradle.kts ** file, configure the `copyDependencies` task:
+2. In the ** server/jvm/-application_-site-specific/build.gradle.kts ** file, configure the `copyDependencies` task:
 
 ```kotlin {4-6}
 ...
@@ -96,7 +132,7 @@ tasks {
 
 ![](/img/copy-dependencies.png)
 
-4. In the file **server/jvm/-application_- distribution/build.gradle.kts** file, configure the `distTar` task:
+3. In the file **server/jvm/-application_- distribution/build.gradle.kts** file, configure the `distTar` task:
 
 ```kotlin {3-5}
 ...
@@ -116,7 +152,7 @@ tasks {
 
 ## Finishing
 :::warning Double check
-Before running the final command, make sure your Java and Gradle are running using the required versions (Java 17 and Gradle 8.3).
+Before running the final commands, make sure your Java and Gradle are running using the required versions (Java 17 and Gradle 8.3).
 
 ```bash
 java -version
